--- a/frontend/src/css/LibroMenu.css
+++ b/frontend/src/css/LibroMenu.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #54546c; 
+    background-color: #131632; /* Azul espacial */
 }
 
 .libro-menu-box {
@@ -11,15 +11,15 @@
     margin: 0 auto;
     padding: 30px;
     border-radius: 8px;
-    background-color: #3f3f4f; 
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    background-color: #30252E; /* Fondo oscuro */
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2); /* Sombra un poco más fuerte */
     font-family: Arial, sans-serif;
     text-align: center;
     display: block;
 }
 
 .libro-menu-box h2 {
-    color: white; 
+    color: #F28D30; /* Naranja */
     margin-bottom: 20px;
 }
 
@@ -30,7 +30,7 @@
     padding: 10px 20px;
     font-size: 16px;
     color: white;
-    background-color: #007bff; 
+    background-color: #336B6F; /* Azul Caribe */
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -38,6 +38,5 @@
 }
 
 .libro-menu-box button:hover {
-    background-color: #0056b3; 
+    background-color: #285A5E; /* Azul Caribe más oscuro */
 }
-
