Desarrollar comportamiento de solicitud de cheques.

--- a/frontend/src/css/LibroList.css
+++ b/frontend/src/css/LibroList.css
@@ -79,6 +79,12 @@
     margin: 0.3rem 0;
 }
 
+.trueque-list, .buttons-container {
+    flex-direction: column;
+    display: flex;
+    gap: 1rem;
+}
+
 .buttons-container {
     display: flex;
     gap: 1rem;
