--- a/frontend/src/css/LibroList.css
+++ b/frontend/src/css/LibroList.css
@@ -182,3 +182,35 @@
     padding: 0;
     margin: 0;
 }
+
+.libro-photo {
+    width: 120px;
+    height: 160px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #f5f5f5;
+    border-radius: 4px;
+}
+
+.libro-photo img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.no-photo {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #f5f5f5;
+}
+
+.no-photo img {
+    width: 60%;
+    height: 60%;
+    opacity: 0.5;
+}
