--- a/frontend/src/css/Sidebar.css
+++ b/frontend/src/css/Sidebar.css
@@ -4,6 +4,7 @@
     background-color: #2b2b2b;
     position: fixed;
     top:0;
+    left:0;
     color: #ffffff;
     display: flex;
     padding: 1.5rem 0;
