--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -45,11 +45,12 @@ body {
 
 /* Main Content */
 .main-content {
-  margin: 5rem 2rem 2rem 270px;
+  margin: 11.5rem 2rem 2rem 270px;
   padding: 2rem;
   background-color: #ffffff;
   border-radius: 10px;
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
+  top: 210;
 }
 
 .content-title {
