--- a/frontend/src/css/BooksGrid.css
+++ b/frontend/src/css/BooksGrid.css
@@ -13,6 +13,8 @@
     width: 250px;
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease;
+    justify-content: center;
+
   }
   
   .book-card:hover {
