Auto stash before merge of "nuevo-nuevo-front" and "origin/nuevo-nuevo-front"

--- a/frontend/src/css/BooksGrid.css
+++ b/frontend/src/css/BooksGrid.css
@@ -38,8 +38,7 @@
     margin: 0.5rem 0;
   }
   
-  .book-author,
-  .book-condition {
+  .book-detail {
     font-size: 1rem;
     color: #555;
     margin: 0.25rem 0;
