--- a/frontend/src/css/BooksGrid.css
+++ b/frontend/src/css/BooksGrid.css
@@ -13,8 +13,7 @@
     width: 250px;
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease;
-    justify-content: center;
-
+    text-align: center;
   }
   
   .book-card:hover {
@@ -42,5 +41,12 @@
     font-size: 1rem;
     color: #555;
     margin: 0.25rem 0;
+    text-align: left;
+  }
+
+  .book-photo {
+    width: 250px;
+    height: 350px;
+    object-fit: contain;
   }
   
