--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -63,4 +63,7 @@ body {
 
 @import url('Buttons.css');
 @import url('BooksGrid.css');
+@import url('EditForms.css');
+@import url('Trueque.css')
 @import url('Popup.css');
+
