Correccion de estilos rotos en merge

--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -61,9 +61,13 @@ body {
   font-weight: bold;
 }
 
+.libro-list-container {
+  padding: 2rem;
+}
+
 @import url('Buttons.css');
 @import url('BooksGrid.css');
 @import url('EditForms.css');
-@import url('Trueque.css')
+@import url('Trueque.css');
 @import url('Popup.css');
 
