Correcccion de algunos estilos de la pantalla de listado de libros

--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -63,6 +63,7 @@ body {
 
 .libro-list-container {
   padding: 2rem;
+  flex-direction: column; /* Ensure a vertical layout */
 }
 
 @import url('Buttons.css');
