--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -1,3 +1,4 @@
+@import url('TextRelated.css');
 
 /* Global Styles */
 body {
@@ -66,9 +67,16 @@ body {
   flex-direction: column; /* Ensure a vertical layout */
 }
 
+.controls-container {
+  width: 100%;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 @import url('Buttons.css');
 @import url('BooksGrid.css');
 @import url('EditForms.css');
 @import url('Trueque.css');
 @import url('Popup.css');
-
