--- a/frontend/src/css/BooksGrid.css
+++ b/frontend/src/css/BooksGrid.css
@@ -1,58 +1,58 @@
 
 .books-grid {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 2rem;
-  }
-  
-  .book-card {
-    background-color: #ffffff;
-    border-radius: 15px;
-    overflow: hidden;
-    width: 250px;
-    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease;
-    text-align: center;
-  }
-  
-  .book-card:hover {
-    transform: translateY(-10px);
-  }
-  
-  .book-image {
-    width: 100%;
-    height: 350px;
-    object-fit: cover;
-  }
-  
-  .book-info {
-    padding: 1rem;
-  }
-  
-  .book-title {
-    font-size: 1.5rem;
-    font-weight: bold;
-    color: #2b2b2b;
-    margin: 0.5rem 0;
-  }
-  
-  .book-detail {
-    font-size: 1rem;
-    color: #555;
-    margin: 0.25rem 0;
-    text-align: left;
-  }
+  gap: 2rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding-bottom: 3.5rem;
+}
 
-  .book-photo {
-    width: 250px;
-    height: 350px;
-    object-fit: contain;
-  }
-  
-  .book-actions {
-    display: flex;
-    justify-content: center;
-    gap: 1rem;
-    margin-bottom: 1rem;
-  }
+.book-card {
+  background-color: #ffffff;
+  border-radius: 15px;
+  overflow: hidden;
+  width: 250px;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease;
+  text-align: center;
+}
+
+.book-card:hover {
+  transform: translateY(-10px);
+}
+
+.book-image {
+  width: 100%;
+  height: 350px;
+  object-fit: cover;
+}
+
+.book-info {
+  padding: 1rem;
+}
+
+.book-title {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #2b2b2b;
+  margin: 0.5rem 0;
+}
+
+.book-detail {
+  font-size: 1rem;
+  color: #555;
+  margin: 0.25rem 0;
+  text-align: left;
+}
+.book-photo {
+  width: 250px;
+  height: 350px;
+  object-fit: contain;
+}
+
+.book-actions {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  margin-bottom: 1rem;
+}
