--- a/frontend/src/css/Buttons.css
+++ b/frontend/src/css/Buttons.css
@@ -36,24 +36,45 @@ button {
     background-color: #c82333;
   }
 
-
+  
+  /* Botón de modificar (aceptar) */
 .modify-btn {
-  background-color: var(--primary);
-  color: var(--text);
+  background-color: #007bff; /* Bright green */
+  color: #fff;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s;
 }
 
+/* Efecto hover en el botón de modificar */
 .modify-btn:hover {
-  background-color: var(--accent);
-  transform: scale(1.05);
+  background-color: #0056b3; /* Slightly darker bright green */
 }
 
+/* Botón de eliminar (rechazar) */
 .delete-btn {
-  background-color: var(--highlight);
-  color: var(--text);
+  background-color: #cc1111; /* Bright red */
+  color: #fff;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s;
 }
 
+/* Efecto hover en el botón de eliminar */
 .delete-btn:hover {
-  background-color: #ff3b36;
-  transform: scale(1.05);
+  background-color: #991111; /* Slightly darker bright red */
 }
 
+.search-bar {
+  padding: .5rem;
+  width: 300px;
+  align-items: flex;
+}
+
+.agregar-btn {
+  align-self: flex-start;
+}
