--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -4,7 +4,7 @@
 body {
   margin: 0;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background-color: #f9f9f9;
+  background-color: #faf3e0;
   color: #333;
   display: flex;
   flex-direction: column; /* Ensure a vertical layout */
@@ -80,3 +80,4 @@ body {
 @import url('EditForms.css');
 @import url('Trueque.css');
 @import url('Popup.css');
+@import url('LogInSuccess.css');
